# tradedoc-rs

./: CHANGELOG.md  Cargo.toml  README.md  manifest.scm
src/: lib.rs  types.rs
src/templates/: errors.rs  invoice.rs  mod.rs  packing_list.rs  pdf_utils.rs  proforma_invoice.rs
