[package]
name = "tradedoc"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://gofranz.com/"
repository = "https://github.com/franzos/tradedoc-rs/"
description = "Library for generating PDFs like invoices, receipts, packing slips, etc."
readme = "README.md"
authors = ["Franz Geffke <mail@gofranz.com>"]
keywords = ["tradedoc", "pdf", "invoice"]
categories = ["finance"]

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
lopdf = "0.36.0"
rust_decimal = { version = "1.36.0" }
chrono = { version = "0.4.31", default-features = false }