[package]
name = "tradedoc"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://gofranz.com/"
repository = "https://github.com/franzos/tradedoc-rs/"
description = "Library for generating PDFs like invoices, receipts, packing slips, etc."
readme = "README.md"
authors = ["Franz Geffke <mail@gofranz.com>"]
keywords = ["tradedoc", "pdf", "invoice"]
categories = ["finance"]

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
printpdf = { version = "0.8.2", features = ["png"] }
rust_decimal = { version = "1.36.0" }
chrono = { version = "0.4.31", default-features = false }
unicode-script = "0.5"
resvg = "0.38"
usvg = "0.38"
tiny-skia = "0.11"
image = "0.24"